--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,77 @@
+##########################################################################
+### System config ########################################################
+# Port
+server.port=8080
 
+# White label
+server.error.whitelabel.enabled=true
+
+########################################################################
+### Log ###############################################################
+# Log
+logging.file.name=./log/blog.log
+
+# Log LEVEL (7)
+# OFF > FATAL > ERROR > WARN > INFO >DEBUG > TRACE
+logging.level.root=INFO
+
+
+########################################################################
+### Swagger ############################################################
+# swagger open api 3.0
+# http://localhost:8080/swagger-ui.html
+# http://localhost:8080/v3/api-docs/
+# http://localhost:8080/api-docs/
+springdoc.api-docs.path=/api-docs
+# springdoc.swagger-ui.path=/swagger-ui-custom.html
+
+########################################################################
+### JWT ###############################################################
+#jwt.secret=secretOfUsDontBeShy
+#jwt.expire.time=86400000
+#jwt.token.prefix=Bearer
+#jwt.header.string=Authorization
+jwt.secret=hamitmizrak
+
+
+########################################################################
+### INTERNATIONALIZATION  ##############################################
+#spring.messages.basename=messages
+#spring.messages.cacheSeconds=-1
+spring.messages.encoding=UTF-8
+
+
+########################################################################
+### Thymeleaf ##########################################################
+#thymeleaf pasif yapt?m
+spring.thymeleaf.enabled=true
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.content-type=text/html
+
+## performans için teplate ön bellekte tutulabilinir. aktif yada pasif yap?yorum.
+#Spring.thymeleaf.cache=true
+
+
+
+########################################################################
+### Actuator ###############################################################
+# actuator:projemiz hakk?nda bize bilgi verir. false yaparsam actuator kapat?l?r.
+management.endpoints.enabled-by-default=true
+
+# actuator heryerde erisimine izin verdim yani web erisim
+management.endpoints.web.exposure.include=*  
+
+# localhost:8080/actuator/health
+management.endpoints.web.base-path=/actuator 
+
+
+########################################################################
+### Database  ########################################################
+## H2Database
+logging.level.org.springframework.jdbc.core = TRACE
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.show_sql = true
+
+# önce create sonra  durdur update yap
+#jpa > none update create, create-drop, validate
+spring.jpa.hibernate.ddl-auto = update
