application.properties ==> H2DB actived

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,3 +75,42 @@ spring.jpa.properties.hibernate.show_sql = true
 # önce create sonra  durdur update yap
 #jpa > none update create, create-drop, validate
 spring.jpa.hibernate.ddl-auto = update
+
+
+## Generic JNDI Data Source
+##in Memory
+##spring.datasource.url=jdbc:h2:mem:denemedb
+## Directory on Disk
+## spring.datasource.url=jdbc:h2:file:C:/data/denemedb
+##Current User Directory
+##spring.datasource.url=jdbc:h2:file:~/denemedb
+##Current Working Directory
+## http://localhost:8080/h2-console
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./memory_persist/denemedb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
+
+## Mysql
+##CREATE SCHEMA `techcareer_springboot_1` DEFAULT CHARACTER SET utf8 COLLATE utf8_turkish_ci ;
+## use techcareer_springboot_1;
+#spring.datasource.url=jdbc:mysql://localhost:3306/techcareer_springboot_2?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+
+## Postgresql
+#spring.datasource.url=jdbc:postgresql://postgresqldb:5432/studentdb
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.jpa.show-sql=true
+
+
+# Oracle
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+#spring.datasource.username=system
+#spring.datasource.password=Password123
