--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -104,7 +104,7 @@ spring.h2.console.enabled=true
 
 
 ## Postgresql
-#spring.datasource.url=jdbc:postgresql://postgresqldb:5432/studentdb
+#spring.datasource.url=jdbc:postgresql://postgresqldb:5432/techcareer_springboot_2
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
 #spring.jpa.show-sql=true
